# FusprCardGame

./: .gitignore  LICENSE  README.md  default.nix  fcg.cabal  shell.nix
Fuspr/: Ex.hs  IdList.hs  Types.hs
