name:
  fcg
version:
  0.1.0.0
--synopsis:
--description:
license:
  BSD3
license-file:
  LICENSE
author:
  FUSPR
maintainer:
  chessai1996@gmail.com
copyright:
  FUSPR (c) 2018 
category:
  Game 
build-type:
  Simple
extra-source-files:
  ChangeLog.md
  README.md
cabal-version:
  >=1.10

source-repository head
  type:     git
  location: https://github.com/chessai/fcg

flag dev-wall-werror
  description: turn on -Wall -Werror for development purposes
  manual: True
  default: False

executable fcg
  hs-source-dirs:
    app
  main-is:
    Main.hs 
  build-depends:
      base >=4.10 && <5.00
    , containers
    , fclabels 
    , mtl
    , mtl-compat
    , MonadRandom
    , random-shuffle
    , text
  default-language:    Haskell2010
  if flag(dev-wall-werror)
    ghc-options: -Wall -Werror
